multiple changes + fixes

--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -151,8 +151,10 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
-                    class="card-img-top" alt="Rice">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
+                        class="card-img-top" alt="Rice">
+                </div>
                 <div class="card-body regular-font">
                     <h3>RICE</h3>
                     <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary
@@ -168,8 +170,10 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-2.webp"
-                    class="card-img-top" alt="Soyabeans">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-2.webp"
+                        class="card-img-top" alt="Soyabeans">
+                </div>
                 <div class="card-body regular-font">
                     <h3>SOYABEANS</h3>
                     <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
@@ -185,8 +189,10 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-3.webp"
-                    class="card-img-top" alt="Wheat">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-3.webp"
+                        class="card-img-top" alt="Wheat">
+                </div>
                 <div class="card-body regular-font">
                     <h3>WHEAT</h3>
                     <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
@@ -202,8 +208,10 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
-                    class="card-img-top" alt="Sugar">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
+                        class="card-img-top" alt="Sugar">
+                </div>
                 <div class="card-body regular-font">
                     <h3>SUGAR</h3>
                     <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
@@ -219,8 +227,10 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-5.webp"
-                    class="card-img-top" alt="Dal and pulses">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-5.webp"
+                        class="card-img-top" alt="Dal and pulses">
+                </div>
                 <div class="card-body regular-font">
                     <h3>DAL AND PULSES</h3>
                     <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans.
@@ -236,8 +246,10 @@
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
-                    class="card-img-top" alt="Yellow maize">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
+                        class="card-img-top" alt="Yellow maize">
+                </div>
                 <div class="card-body regular-font">
                     <h3>YELLOW MAIZE</h3>
                     <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
@@ -256,38 +268,48 @@
 
     <!-- FOOTER -->
 
-    <section class="footer">
+    <section class="footer pt-3 pb-1">
         <div class="container">
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
+                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                    class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
-                        class="img-fluid-footer-logo">
-                    <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                        class="img-fluid img-fluid-footer-logo">
+                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
-                <div class="col-md-3 mb-4 text-light pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
                     <h3>Useful Links</h3>
+                    <!-- <div class="arrow ps-lg-3"> -->
                     <div class="arrow">
-                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./about.html">About Us <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
                 <!-- frame 38 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
                         <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
@@ -315,9 +337,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-                    Technologies</p>
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved.</p>
             </div>
         </div>
     </section>
@@ -361,6 +383,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
