--- a/biofuels.html
+++ b/biofuels.html
@@ -149,7 +149,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to meet
+            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw
+                materials to meet
                 your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
                 and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
                 high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
@@ -159,8 +160,10 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-1.webp" class="card-img-top"
-                    alt="BIO DIESEL">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/biofuels/card-img/biofuels-card-img-1.webp" class="card-img-top"
+                        alt="BIO DIESEL">
+                </div>
                 <div class="card-body regular-font">
                     <h3>BIO DIESEL</h3>
                     <p>BioDiesel is a renewable diesel fuel made from organic materials.</p>
@@ -175,8 +178,10 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.webp" class="card-img-top"
-                    alt="ETHANOL">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.webp" class="card-img-top"
+                        alt="ETHANOL">
+                </div>
                 <div class="card-body regular-font">
                     <h3>ETHANOL</h3>
                     <p>Ethanol is an alcohol-based biofuel primarily derived from corn or sugarcane.</p>
@@ -191,8 +196,10 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.webp" class="card-img-top"
-                    alt="BIO LNG">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.webp" class="card-img-top"
+                        alt="BIO LNG">
+                </div>
                 <div class="card-body regular-font">
                     <h3>BIO LNG</h3>
                     <p>Bio LNG is a renewable form of liquefied natural gas made from organic matter.</p>
@@ -207,8 +214,10 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-4.webp" class="card-img-top"
-                    alt="FATTY ACIDS AND STERNE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/biofuels/card-img/biofuels-card-img-4.webp" class="card-img-top"
+                        alt="FATTY ACIDS AND STERNE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>FATTY ACIDS AND STERNE</h3>
                     <p>Fatty Acids & Sterne are renewable bio-based materials used in various industries.</p>
@@ -223,8 +232,10 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-5.webp" class="card-img-top"
-                    alt="PALM OIL AND USED COOKING OIL">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/biofuels/card-img/biofuels-card-img-5.webp" class="card-img-top"
+                        alt="PALM OIL AND USED COOKING OIL">
+                </div>
                 <div class="card-body regular-font">
                     <h3>PALM OIL AND USED COOKING OIL</h3>
                     <p>Palm Oil and Used Cooking Oil are sustainable sources for biofuel production.</p>
@@ -242,38 +253,48 @@
 
     <!-- FOOTER -->
 
-    <section class="footer">
+    <section class="footer pt-3 pb-1">
         <div class="container">
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
+                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                    class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
-                        class="img-fluid-footer-logo">
-                    <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                        class="img-fluid img-fluid-footer-logo">
+                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
-                <div class="col-md-3 mb-4 text-light pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
                     <h3>Useful Links</h3>
+                    <!-- <div class="arrow ps-lg-3"> -->
                     <div class="arrow">
-                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./about.html">About Us <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
                 <!-- frame 38 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
                         <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
@@ -301,9 +322,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-                    Technologies</p>
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved.</p>
             </div>
         </div>
     </section>
@@ -347,6 +368,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
