--- a/chemicals.html
+++ b/chemicals.html
@@ -152,7 +152,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw materials to meet
+            <p class="text-center regular-font">At BVM, we take pride in serving a diverse range of essential raw
+                materials to meet
                 your
                 global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
                 pulses,
@@ -164,156 +165,70 @@
         </div>
         <div class="row">
             <!-- 1st Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
-                    alt="GROUNDNUT OIL">
-                <div class="card-body">
-                    <h3>GROUNDNUT OIL</h3>
-                    <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
-                    <ul>
-                        <li>Rich, nutty flavour enhances various cuisines.</li>
-                        <li>High smoke point makes it suitable for frying.</li>
-                        <li>Contains heart-healthy monounsaturated fats.</li>
-                        <li>Source of vitamin E, an antioxidant.</li>
-                        <li>Commonly used in Asian and African cooking.</li>
-                    </ul>
-                </div>
-            </div> -->
+
             <!-- 2nd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top"
-                    alt="SOYABEANS">
-                <div class="card-body">
-                    <h3>SOYABEANS</h3>
-                    <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
-                        animal feed,
-                        and oil production.</p>
-                    <ul>
-                        <li>Soybeans: major plant-based protein and oil source.</li>
-                        <li>Used in tofu, soy milk, and soybean oil.</li>
-                        <li>Essential for animal feed and biodiesel.</li>
-                        <li>Top producers: U.S., Brazil, Argentina.</li>
-                        <li>Gaining popularity for health benefits and sustainability.</li>
-                    </ul>
-                </div>
-            </div> -->
+
             <!-- 3rd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top"
-                    alt="CASTOR OIL">
-                <div class="card-body">
-                    <h3>CASTOR OIL</h3>
-                    <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
-                    <ul>
-                        <li>Derived from castor beans and used for medicinal purposes.</li>
-                        <li>Known for its laxative properties.</li>
-                        <li>Also used in cosmetics and industrial applications.</li>
-                        <li>Contains ricinoleic acid with potential health benefits.</li>
-                        <li>Should be used cautiously due to its potency.</li>
-                    </ul>
-                </div>
-            </div> -->
+
             <!-- 4th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
-                    alt="SUNFLOWER OIL">
-                <div class="card-body">
-                    <h3>SUNFLOWER OIL</h3>
-                    <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
-                    <ul>
-                        <li>Neutral taste and high smoke point make it versatile.</li>
-                        <li>Low in saturated fats and rich in vitamin E.</li>
-                        <li>Popular for frying, sautéing, and salad dressings.</li>
-                        <li>Supports heart health and may reduce inflammation.</li>
-                        <li>Commonly used in Eastern European and Mediterranean cuisines.</li>
-                    </ul>
-                </div>
-            </div> -->
+
             <!-- 5th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
-                    alt="MUSTARD OIL">
-                <div class="card-body">
-                    <h3>MUSTARD OIL</h3>
-                    <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
-                    <ul>
-                        <li>Pungent flavour adds unique taste to dishes.</li>
-                        <li>Used extensively in Indian and Southeast Asian cooking.</li>
-                        <li>High smoking point makes it suitable for deep frying.</li>
-                        <li>Contains omega-3 and omega-6 fatty acids.</li>
-                        <li>Can be milder when heated for a shorter time.</li>
-                    </ul>
-                </div>
-            </div> -->
+
             <!-- 6th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top"
-                    alt="PALM OIL">
-                <div class="card-body">
-                    <h3>PALM OIL</h3>
-                    <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
-                    <ul>
-                        <li>Versatile and widely used in the food industry.</li>
-                        <li>Used in various processed products like margarine and snacks.</li>
-                        <li>Controversial due to environmental concerns in palm oil production.</li>
-                        <li>High in saturated fats but also contains beneficial components.</li>
-                        <li>Rich in antioxidants like vitamin E and carotenoids.</li>
-                    </ul>
-                </div>
-            </div> -->
+
         </div>
     </div>
 
-
     <!-- FOOTER -->
 
-    <section class="footer">
+    <section class="footer pt-3 pb-1">
         <div class="container">
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
                     <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
-                        class="img-fluid-footer-logo"> -->
+                    class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
-                        class="img-fluid-footer-logo">
-                    <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                        class="img-fluid img-fluid-footer-logo">
+                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
-                <div class="col-md-3 mb-4 text-light pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
                     <h3>Useful Links</h3>
+                    <!-- <div class="arrow ps-lg-3"> -->
                     <div class="arrow">
-                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./about.html">About Us <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
                 <!-- frame 38 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
                         <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
                         <br>
                         <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
                     </div>
-                    <!-- <div class="frame-35-icon pt-3">
-                        <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-                        <img src="assets/images/footer-section/Group (3).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-                        <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
-                    </div> -->
                     <div class="footer-icon-container">
                         <a class="social-icon" href="https://www.facebook.com/" target="_blank"
                             rel="noopener noreferrer">
@@ -335,9 +250,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-                    Technologies</p>
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved.</p>
             </div>
         </div>
     </section>
@@ -381,6 +296,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
