--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -148,8 +148,10 @@
     <div class="row">
       <!-- 1st Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
-          alt="GROUNDNUT OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
+            alt="GROUNDNUT OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>GROUNDNUT OIL</h3>
           <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
@@ -164,7 +166,9 @@
       </div>
       <!-- 2nd Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top" alt="SOYABEANS">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top" alt="SOYABEANS">
+        </div>
         <div class="card-body regular-font">
           <h3>SOYABEANS</h3>
           <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed,
@@ -180,7 +184,10 @@
       </div>
       <!-- 3rd Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top" alt="CASTOR OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top"
+            alt="CASTOR OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>CASTOR OIL</h3>
           <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
@@ -195,8 +202,10 @@
       </div>
       <!-- 4th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
-          alt="SUNFLOWER OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
+            alt="SUNFLOWER OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>SUNFLOWER OIL</h3>
           <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
@@ -211,8 +220,10 @@
       </div>
       <!-- 5th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
-          alt="MUSTARD OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
+            alt="MUSTARD OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>MUSTARD OIL</h3>
           <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
@@ -227,7 +238,9 @@
       </div>
       <!-- 6th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top" alt="PALM OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top" alt="PALM OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>PALM OIL</h3>
           <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
@@ -245,50 +258,49 @@
 
   <!-- FOOTER -->
 
-  <section class="footer">
+  <section class="footer pt-3 pb-1">
     <div class="container">
       <div class="row equal-spacing">
         <!-- frame 35 -->
         <div class="col-md-3 mb-4">
           <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
-                      class="img-fluid-footer-logo"> -->
-          <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo" class="img-fluid-footer-logo">
-          <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                  class="img-fluid-footer-logo"> -->
+          <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
+            class="img-fluid img-fluid-footer-logo">
+          <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
             trade, a company that thrives on connecting the world through commerce.</p>
         </div>
         <!-- frame 40 -->
-        <div class="col-md-3 mb-4 text-light pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
           <h3>Useful Links</h3>
+          <!-- <div class="arrow ps-lg-3"> -->
           <div class="arrow">
-            <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                alt=""></a><br>
-            <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+            <a class="text-light" href="./index.html">Home <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="./about.html">About Us <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="./our-services.html">Our Services <img
+                src="assets/images/footer-section/Arrow 1.png" alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a>
           </div>
         </div>
         <!-- frame 39 -->
-        <div class="col-md-3 mb-4 text-white pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
           <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
             Tsim Sha Tsui, Kowloon (HK)</p>
         </div>
         <!-- frame 38 -->
-        <div class="col-md-3 mb-4 text-white pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
           <h3>Get in Touch</h3>
           <div class="frame39-icon pt-3">
             <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
             <br>
             <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
           </div>
-          <!-- <div class="frame-35-icon pt-3">
-                      <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-                      <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-                      <img src="assets/images/footer-section/Group (3).png" alt="icon">
-                      <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-                      <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
-                  </div> -->
           <div class="footer-icon-container">
             <a class="social-icon" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-facebook"></i>
@@ -306,9 +318,9 @@
         </div>
       </div>
       <hr class="hr-line text-white">
-      <div class="footer-p-content text-white text-center">
-        <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-          Technologies</p>
+      <div class="footer-p-content text-white">
+        <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+          Reserved.</p>
       </div>
     </div>
   </section>
@@ -352,6 +364,13 @@
             navbar.classList.remove('navbar-hidden');
           }
           lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+        }
+      });
+
+      //Screen resize handling
+      window.addEventListener('resize', function () {
+        if (!isMobileView.matches) {
+          navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
         }
       });
     });
