--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                 <div class="col-12 p-content-container mb-3">
                     <div class="box-about">
                         <h2 class="text-start text-dark">ABOUT US</h2>
-                        <p class="p-content text-dark regular-font">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of
+                        <p class="p-content text-dark regular-font">At Bhagirath BVM Grand (HK) Limited, we are the
+                            catalysts of
                             global trade, a company that thrives on connecting the world through commerce. With a
                             passion for trade that transcends borders and industries, we're your trusted partner for all
                             things products. We source, supply, and inspire trade globally, ensuring that our clients
@@ -210,7 +211,8 @@
                         <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-1.webp"
                             class="card-img-top img-fluid" alt="Global Merchant Trader">
                         <h3 class="about-card-title text-dark">Global Merchant Trader</h3>
-                        <p class="about-card-text text-black regular-font">We're your global merchants, passionate about delivering
+                        <p class="about-card-text text-black regular-font">We're your global merchants, passionate about
+                            delivering
                             top-quality products to eager markets worldwide. With extensive experience and a robust
                             network, we're your go-to partner for excellence in international trade.</p>
                     </div>
@@ -220,7 +222,8 @@
                         <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2-alt.webp"
                             class="card-img-top" alt="We Serve Globally">
                         <h3 class="about-card-title text-dark">We Serve Globally</h3>
-                        <p class="about-card-text text-black regular-font">At Bhagirath BVM Grand, we're dedicated to serving the
+                        <p class="about-card-text text-black regular-font">At Bhagirath BVM Grand, we're dedicated to
+                            serving the
                             world. Our products and services know no boundaries, ensuring you receive the best no matter
                             where you are. Our mission is to enrich lives globally through trade, right to your
                             doorstep.</p>
@@ -231,7 +234,8 @@
                         <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-3-alt.webp"
                             class="card-img-top" alt="Professional Excellence">
                         <h3 class="about-card-title text-dark">Professional Excellence</h3>
-                        <p class="about-card-text text-black regular-font">Excellence is our way of life. We're a team of dedicated
+                        <p class="about-card-text text-black regular-font">Excellence is our way of life. We're a team
+                            of dedicated
                             professionals who know international trade inside out. We take pride in building lasting
                             relationships and ensuring our clients always get the best.</p>
                     </div>
@@ -246,7 +250,8 @@
         <div class="container">
             <div class="product-title">
                 <h2>PRODUCTS WE SERVICES</h2>
-                <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+                <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt
+                    at.</p>
             </div>
             <!-- SLIDER -->
             <div class="slider-wrapper">
@@ -281,7 +286,8 @@
         <div class="container">
             <div class="content-our-skill">
                 <h2 class="text-center">OUR SKILLS</h2>
-                <p class="pb-5 regular-font text-center">At Bhagirath BVM Grand, we pride ourselves on delivering your goods on time,
+                <p class="pb-5 regular-font text-center">At Bhagirath BVM Grand, we pride ourselves on delivering your
+                    goods on time,
                     every time, with a high success rate that speaks to our commitment to your satisfaction. We excel in
                     swiftly sourcing quality products and maintaining transparent, clear communication throughout our
                     partnership, ensuring your peace of mind.</p>
@@ -355,7 +361,8 @@
         <div class="container">
             <div class="our-services-content text-center">
                 <h2>OUR SERVICES</h2>
-                <p class="regular-font">At Bhagirath BVM Grand, we're here to cater to your every need. Our range of services is designed to
+                <p class="regular-font">At Bhagirath BVM Grand, we're here to cater to your every need. Our range of
+                    services is designed to
                     make your life easier and more efficient. Here's what we offer</p>
             </div>
 
@@ -367,7 +374,8 @@
                                 <img src="assets/images/our-services-icon-img/Vector.png" alt="Global Sourcing">
                             </div>
                             <h2>Global Sourcing</h2>
-                            <p class="regular-font">We're your reliable source for a wide range of products sourced from around the world.
+                            <p class="regular-font">We're your reliable source for a wide range of products sourced from
+                                around the world.
                                 Count
                                 on us to find the finest products that meet your specifications.</p>
                         </div>
@@ -379,7 +387,8 @@
                                     alt="Logistics and Shipping">
                             </div>
                             <h2>Logistics and Shipping</h2>
-                            <p class="regular-font">From cargo handling to global shipping solutions, we streamline the logistics process.
+                            <p class="regular-font">From cargo handling to global shipping solutions, we streamline the
+                                logistics process.
                                 Your
                                 products will reach their destination safely and on time.</p>
                         </div>
@@ -390,7 +399,8 @@
                                 <img src="assets/images/our-services-icon-img/Vector (2).png" alt="Quality Assurance">
                             </div>
                             <h2>Quality Assurance</h2>
-                            <p class="regular-font">Quality is our hallmark. We rigorously inspect and verify products to ensure they meet
+                            <p class="regular-font">Quality is our hallmark. We rigorously inspect and verify products
+                                to ensure they meet
                                 the
                                 highest standards, so you can have complete confidence in what you receive.</p>
                         </div>
@@ -402,7 +412,8 @@
                                     alt="Customized Solutions">
                             </div>
                             <h2>Customized Solutions</h2>
-                            <p class="regular-font">We understand that one size doesn't fit all. Our team tailors solutions to meet your
+                            <p class="regular-font">We understand that one size doesn't fit all. Our team tailors
+                                solutions to meet your
                                 specific
                                 needs, ensuring a seamless and efficient experience.</p>
                         </div>
@@ -414,7 +425,8 @@
                                     alt="Global Market Access">
                             </div>
                             <h2>Global Market Access</h2>
-                            <p class="regular-font">Whether you're a manufacturer looking to export or a business aiming to import, we open
+                            <p class="regular-font">Whether you're a manufacturer looking to export or a business aiming
+                                to import, we open
                                 doors
                                 to global markets, expanding your reach and opportunities.</p>
                         </div>
@@ -425,7 +437,8 @@
                                 <img src="assets/images/our-services-icon-img/Vector (5).png" alt="Customer Support">
                             </div>
                             <h2>Customer Support</h2>
-                            <p class="regular-font">Our commitment doesn't end with a transaction. We provide exceptional customer support,
+                            <p class="regular-font">Our commitment doesn't end with a transaction. We provide
+                                exceptional customer support,
                                 ensuring your satisfaction and addressing your queries and concerns promptly.</p>
                         </div>
                     </div>
@@ -441,7 +454,8 @@
     <section class="trading-portfolio py-5 pt-5">
         <div class="container trading-p">
             <h2 class="text-center">TRADING PORTFOLIO</h2>
-            <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum pharetra
+            <p class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum
+                pharetra
                 vulputate. Ipsum fringilla scelerisque nec eu. Odio euismod ultricies nibh amet eu dignissim morbi
                 magnis. Pellentesque lacus odio ullamcorper at mauris facilisi orci libero quam. Tellus a mauris
                 ultrices ligula.</p>
@@ -450,7 +464,8 @@
                 <div class="row">
                     <!-- First Section: Text -->
                     <div class="new-trading-portfolio-box-text col-md-4 order-md-1">
-                        <p class="regular-font">Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the catalysts of global
+                        <p class="regular-font">Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the
+                            catalysts of global
                             trade, connecting the world through commerce. Our passion for trade transcends borders, and
                             we're your trusted partner for all things products. From sourcing to supply, we inspire
                             global trade, providing a reliable gateway to a world of possibilities. Let's shape a future
@@ -494,7 +509,8 @@
     <section class="reach-out py-5 px-5">
         <div class="container justify-content-center text-justify">
             <h2>Reach out to us</h2>
-            <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum pharetra vulputate.
+            <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum pharetra
+                vulputate.
                 Ipsum fringilla scelerisque nec eu. Odio euismod ultricies nibh amet eu dignissim morbi magnis.
                 Pellentesque lacus odio ullamcorper at mauris facilisi orci libero quam. Tellus a mauris
                 ultrices ligula. Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum
@@ -656,6 +672,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
