--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -148,8 +148,10 @@
     <div class="row">
       <!-- 1st Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/AVIATION FUEL.webp" class="card-img-top"
-          alt="AVIATION FUEL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/AVIATION FUEL.webp" class="card-img-top"
+            alt="AVIATION FUEL">
+        </div>
         <div class="card-body regular-font">
           <h3>AVIATION FUEL</h3>
           <p>Fueling the skies with high-octane precision.</p>
@@ -164,7 +166,9 @@
       </div>
       <!-- 2nd Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/D2 GAS OIL.webp" class="card-img-top" alt="D2 GAS OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/D2 GAS OIL.webp" class="card-img-top" alt="D2 GAS OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>D2 GAS OIL</h3>
           <p>Powering transportation and industries with efficiency.</p>
@@ -179,8 +183,10 @@
       </div>
       <!-- 3rd Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/D6 DIESEL FUEL (2).webp" class="card-img-top"
-          alt="D6 DIESEL FUEL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/D6 DIESEL FUEL (2).webp" class="card-img-top"
+            alt="D6 DIESEL FUEL">
+        </div>
         <div class="card-body regular-font">
           <h3>D6 DIESEL FUEL</h3>
           <p>Heavy-duty energy for industrial giants.</p>
@@ -195,8 +201,10 @@
       </div>
       <!-- 4th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/EN-590 DIESEL.webp" class="card-img-top"
-          alt="EN-590 DIESEL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/EN-590 DIESEL.webp" class="card-img-top"
+            alt="EN-590 DIESEL">
+        </div>
         <div class="card-body regular-font">
           <h3>EN-590 DIESEL</h3>
           <p>Setting the European standard for clean diesel.</p>
@@ -211,7 +219,9 @@
       </div>
       <!-- 5th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/FUEL OIL.webp" class="card-img-top" alt="FUEL OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/FUEL OIL.webp" class="card-img-top" alt="FUEL OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>FUEL OIL</h3>
           <p>From furnaces to generators, the backbone of industry.</p>
@@ -226,7 +236,9 @@
       </div>
       <!-- 6th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/CRUDE OIL.webp" class="card-img-top" alt="CRUDE OIL">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/CRUDE OIL.webp" class="card-img-top" alt="CRUDE OIL">
+        </div>
         <div class="card-body regular-font">
           <h3>CRUDE OIL</h3>
           <p>The source of endless possibilities in refining.</p>
@@ -241,7 +253,9 @@
       </div>
       <!-- 7th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/MAZUT.webp" class="card-img-top" alt="MAZUT">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/MAZUT.webp" class="card-img-top" alt="MAZUT">
+        </div>
         <div class="card-body regular-font">
           <h3>MAZUT</h3>
           <p>A heavyweight in the world of industrial fuels.</p>
@@ -256,8 +270,10 @@
       </div>
       <!-- 8th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED PETROLEUM GAS.webp" class="card-img-top"
-          alt="LIQUIFIED PETROLEUM GAS">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED PETROLEUM GAS.webp" class="card-img-top"
+            alt="LIQUIFIED PETROLEUM GAS">
+        </div>
         <div class="card-body regular-font">
           <h3>LIQUIFIED PETROLEUM GAS</h3>
           <p>Clean-burning energy for diverse applications.</p>
@@ -272,8 +288,10 @@
       </div>
       <!-- 9th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED NATURAL GAS.webp" class="card-img-top"
-          alt="LIQUIFIED NATURAL GAS">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/LIQUIFIED NATURAL GAS.webp" class="card-img-top"
+            alt="LIQUIFIED NATURAL GAS">
+        </div>
         <div class="card-body regular-font">
           <h3>LIQUIFIED NATURAL GAS</h3>
           <p>Unlocking the potential of natural gas in liquid form.</p>
@@ -288,8 +306,10 @@
       </div>
       <!-- 10th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/PETROLEUM COKE.webp" class="card-img-top"
-          alt="PETROLEUM COKE">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/PETROLEUM COKE.webp" class="card-img-top"
+            alt="PETROLEUM COKE">
+        </div>
         <div class="card-body regular-font">
           <h3>PETROLEUM COKE</h3>
           <p>A versatile byproduct with industrial significance.</p>
@@ -304,7 +324,9 @@
       </div>
       <!-- 11th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/NAPHTHA.webp" class="card-img-top" alt="NAPHTHA">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/NAPHTHA.webp" class="card-img-top" alt="NAPHTHA">
+        </div>
         <div class="card-body regular-font">
           <h3>NAPHTHA</h3>
           <p>The essential feedstock for the petrochemical industry.</p>
@@ -319,7 +341,9 @@
       </div>
       <!-- 12th Card -->
       <div class="card-product col-md-6 p-4">
-        <img src="assets/images/petroleum-oil-page/card-img/BITUMEN.webp" class="card-img-top" alt="BITUMEN">
+        <div class="img-container-no-overflow">
+          <img src="assets/images/petroleum-oil-page/card-img/BITUMEN.webp" class="card-img-top" alt="BITUMEN">
+        </div>
         <div class="card-body regular-font">
           <h3>BITUMEN</h3>
           <p>Building roads and infrastructure, one layer at a time.</p>
@@ -337,35 +361,43 @@
 
   <!-- FOOTER -->
 
-  <section class="footer">
+  <section class="footer pt-3 pb-1">
     <div class="container">
       <div class="row equal-spacing">
         <!-- frame 35 -->
         <div class="col-md-3 mb-4">
-          <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo" class="img-fluid-footer-logo">
-          <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+          <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                  class="img-fluid-footer-logo"> -->
+          <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
+            class="img-fluid img-fluid-footer-logo">
+          <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
             trade, a company that thrives on connecting the world through commerce.</p>
         </div>
         <!-- frame 40 -->
-        <div class="col-md-3 mb-4 text-light pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
           <h3>Useful Links</h3>
+          <!-- <div class="arrow ps-lg-3"> -->
           <div class="arrow">
-            <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                alt=""></a><br>
-            <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+            <a class="text-light" href="./index.html">Home <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="./about.html">About Us <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="./our-services.html">Our Services <img
+                src="assets/images/footer-section/Arrow 1.png" alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a><br>
+            <a class="text-light" href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png"
+                alt="Arrow" class="float-md-end pt-md-2 pe-lg-4"></a>
           </div>
         </div>
         <!-- frame 39 -->
-        <div class="col-md-3 mb-4 text-white pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
           <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
             Tsim Sha Tsui, Kowloon (HK)</p>
         </div>
         <!-- frame 38 -->
-        <div class="col-md-3 mb-4 text-white pt-5">
+        <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
           <h3>Get in Touch</h3>
           <div class="frame39-icon pt-3">
             <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
@@ -389,9 +421,9 @@
         </div>
       </div>
       <hr class="hr-line text-white">
-      <div class="footer-p-content text-white text-center">
-        <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-          Technologies</p>
+      <div class="footer-p-content text-white">
+        <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+          Reserved.</p>
       </div>
     </div>
   </section>
@@ -435,6 +467,13 @@
             navbar.classList.remove('navbar-hidden');
           }
           lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+        }
+      });
+
+      //Screen resize handling
+      window.addEventListener('resize', function () {
+        if (!isMobileView.matches) {
+          navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
         }
       });
     });
