--- a/cattlefeed-and-fertilizers.html
+++ b/cattlefeed-and-fertilizers.html
@@ -166,8 +166,10 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-1.webp"
-                    class="card-img-top" alt="RICE HUSK">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-1.webp"
+                        class="card-img-top" alt="RICE HUSK">
+                </div>
                 <div class="card-body regular-font">
                     <h3>RICE HUSK</h3>
                     <p>A cost-effective livestock feed choice.</p>
@@ -182,8 +184,10 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-2.webp"
-                    class="card-img-top" alt="YELLOW MAIZE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-2.webp"
+                        class="card-img-top" alt="YELLOW MAIZE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>YELLOW MAIZE</h3>
                     <p>Energy-packed staple for livestock diets.</p>
@@ -198,8 +202,10 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-3.webp"
-                    class="card-img-top" alt="SOYABEAN">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-3.webp"
+                        class="card-img-top" alt="SOYABEAN">
+                </div>
                 <div class="card-body regular-font">
                     <h3>SOYABEAN</h3>
                     <p>High-protein essential for cattle health.</p>
@@ -214,8 +220,10 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-4.webp"
-                    class="card-img-top" alt="NON GMO">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-4.webp"
+                        class="card-img-top" alt="NON GMO">
+                </div>
                 <div class="card-body regular-font">
                     <h3>NON GMO</h3>
                     <p>Ensuring safety and purity.</p>
@@ -230,8 +238,10 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-5.webp"
-                    class="card-img-top" alt="RAW MATERIALS & OTHER FEEDS">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-5.webp"
+                        class="card-img-top" alt="RAW MATERIALS & OTHER FEEDS">
+                </div>
                 <div class="card-body regular-font">
                     <h3>RAW MATERIALS & OTHER FEEDS</h3>
                     <p>Diverse feeds for agriculture and livestock nutrition.</p>
@@ -246,8 +256,10 @@
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-6.webp"
-                    class="card-img-top" alt="VERMI COMPOST">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-6.webp"
+                        class="card-img-top" alt="VERMI COMPOST">
+                </div>
                 <div class="card-body regular-font">
                     <h3>VERMI COMPOST</h3>
                     <p>Organic fertiliser enriches soil fertility.</p>
@@ -262,8 +274,10 @@
             </div>
             <!-- 7th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-7.webp"
-                    class="card-img-top" alt="UREA N46 - GRANULAR PRILLED">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-7.webp"
+                        class="card-img-top" alt="UREA N46 - GRANULAR PRILLED">
+                </div>
                 <div class="card-body regular-font">
                     <h3>UREA N46 - GRANULAR PRILLED</h3>
                     <p>Reliable nitrogen source for plants.</p>
@@ -278,8 +292,10 @@
             </div>
             <!-- 8th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-8.webp"
-                    class="card-img-top" alt="DAP & MAP">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-8.webp"
+                        class="card-img-top" alt="DAP & MAP">
+                </div>
                 <div class="card-body regular-font">
                     <h3>DAP & MAP</h3>
                     <p>Phosphorus-rich fertilisers for robust roots.</p>
@@ -294,8 +310,10 @@
             </div>
             <!-- 9th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-9.webp"
-                    class="card-img-top" alt="COMPLEX & SOLUABLE FERTILIZERS">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-9.webp"
+                        class="card-img-top" alt="COMPLEX & SOLUABLE FERTILIZERS">
+                </div>
                 <div class="card-body regular-font">
                     <h3>COMPLEX & SOLUABLE FERTILIZERS</h3>
                     <p>Tailored blends for crop needs.</p>
@@ -310,8 +328,10 @@
             </div>
             <!-- 10th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-10.webp"
-                    class="card-img-top" alt="POTASH & NPK">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-10.webp"
+                        class="card-img-top" alt="POTASH & NPK">
+                </div>
                 <div class="card-body regular-font">
                     <h3>POTASH & NPK</h3>
                     <p>Balanced nutrients for plant vitality.</p>
@@ -326,8 +346,10 @@
             </div>
             <!-- 11th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-11.webp"
-                    class="card-img-top" alt="BIO NPK & BIO DAP">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-11.webp"
+                        class="card-img-top" alt="BIO NPK & BIO DAP">
+                </div>
                 <div class="card-body regular-font">
                     <h3>BIO NPK & BIO DAP</h3>
                     <p>Sustainable solutions for agriculture.</p>
@@ -342,8 +364,10 @@
             </div>
             <!-- 12th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-12.webp"
-                    class="card-img-top" alt="BIO PROM">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-12.webp"
+                        class="card-img-top" alt="BIO PROM">
+                </div>
                 <div class="card-body regular-font">
                     <h3>BIO PROM</h3>
                     <p>Innovative crop productivity boosters.</p>
@@ -358,8 +382,10 @@
             </div>
             <!-- 13th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-13.webp"
-                    class="card-img-top" alt="UREA GAS / LIQUID">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/cattlefeed-and-fertilizers/card-img/cattlefeed-and-fertilizers-card-img-13.webp"
+                        class="card-img-top" alt="UREA GAS / LIQUID">
+                </div>
                 <div class="card-body regular-font">
                     <h3>UREA GAS / LIQUID</h3>
                     <p>Versatile nitrogen fertilisers for various applications.</p>
@@ -377,38 +403,48 @@
 
     <!-- FOOTER -->
 
-    <section class="footer">
+    <section class="footer pt-3 pb-1">
         <div class="container">
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
+                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                    class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
-                        class="img-fluid-footer-logo">
-                    <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                        class="img-fluid img-fluid-footer-logo">
+                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
-                <div class="col-md-3 mb-4 text-light pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
                     <h3>Useful Links</h3>
+                    <!-- <div class="arrow ps-lg-3"> -->
                     <div class="arrow">
-                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./about.html">About Us <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
                 <!-- frame 38 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
                         <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
@@ -436,9 +472,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-                    Technologies</p>
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved.</p>
             </div>
         </div>
     </section>
@@ -482,6 +518,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
