--- a/minerals-and-ores.html
+++ b/minerals-and-ores.html
@@ -157,7 +157,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">Welcome to Bhagirath BVM Grand's Minerals & Ores selection. We are the driving force
+            <p class="text-center regular-font">Welcome to Bhagirath BVM Grand's Minerals & Ores selection. We are the
+                driving force
                 behind global trade, connecting nations and industries. With products including Ferro Chrome, Iron Ore,
                 Coal, Chrome Concentrate, Bauxite, Calamine, Manganese, and Lithium, we're your reliable source for raw
                 materials. Trust us to open doors to a world of trade opportunities.
@@ -166,8 +167,10 @@
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-1.webp"
-                    class="card-img-top" alt="FERRO CROME">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-1.webp"
+                        class="card-img-top" alt="FERRO CROME">
+                </div>
                 <div class="card-body regular-font">
                     <h3>FERRO CROME</h3>
                     <p>Chromium and iron alloy widely used in stainless steel production.</p>
@@ -182,8 +185,10 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-2.webp"
-                    class="card-img-top" alt="IRON ORE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-2.webp"
+                        class="card-img-top" alt="IRON ORE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>IRON ORE</h3>
                     <p>Raw material in steelmaking, consisting of iron oxides extracted from mines.</p>
@@ -198,8 +203,10 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-3.webp"
-                    class="card-img-top" alt="COAL">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-3.webp"
+                        class="card-img-top" alt="COAL">
+                </div>
                 <div class="card-body regular-font">
                     <h3>COAL</h3>
                     <p>Fossil fuel essential for electricity generation and industrial processes.</p>
@@ -214,8 +221,10 @@
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-4.webp"
-                    class="card-img-top" alt="CROME CONCENTRATE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-4.webp"
+                        class="card-img-top" alt="CROME CONCENTRATE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>CROME CONCENTRATE</h3>
                     <p>High-chromium material crucial for making alloys and chemicals.</p>
@@ -230,8 +239,10 @@
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-5.webp"
-                    class="card-img-top" alt="BAUXITE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-5.webp"
+                        class="card-img-top" alt="BAUXITE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>BAUXITE</h3>
                     <p>Primary source of aluminium metal production, derived from aluminium oxide ores.</p>
@@ -246,8 +257,10 @@
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-6.webp"
-                    class="card-img-top" alt="CALAMINE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-6.webp"
+                        class="card-img-top" alt="CALAMINE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>CALAMINE</h3>
                     <p>Mineral primarily composed of zinc carbonate, utilised in pharmaceutical products.</p>
@@ -262,8 +275,10 @@
             </div>
             <!-- 7th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-7.webp"
-                    class="card-img-top" alt="MANGANESE">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-7.webp"
+                        class="card-img-top" alt="MANGANESE">
+                </div>
                 <div class="card-body regular-font">
                     <h3>MANGANESE</h3>
                     <p>An element in steel production, improving its strength and durability.</p>
@@ -278,8 +293,10 @@
             </div>
             <!-- 8th Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-8.webp"
-                    class="card-img-top" alt="LITHIUM">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/minerals-and-ores/card-img/minerals-and-ores-card-img-8.webp"
+                        class="card-img-top" alt="LITHIUM">
+                </div>
                 <div class="card-body regular-font">
                     <h3>LITHIUM</h3>
                     <p>A lightweight metal critical for batteries in electronics and electric vehicles.</p>
@@ -297,38 +314,48 @@
 
     <!-- FOOTER -->
 
-    <section class="footer">
+    <section class="footer pt-3 pb-1">
         <div class="container">
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
+                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                    class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
-                        class="img-fluid-footer-logo">
-                    <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                        class="img-fluid img-fluid-footer-logo">
+                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
-                <div class="col-md-3 mb-4 text-light pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 ps-lg-5">
                     <h3>Useful Links</h3>
+                    <!-- <div class="arrow ps-lg-3"> -->
                     <div class="arrow">
-                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
-                                alt=""></a><br>
-                        <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
+                        <a class="text-light" href="./index.html">Home <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./about.html">About Us <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="./our-services.html">Our Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Terms of Services <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a><br>
+                        <a class="text-light" href="#">Privacy Policy <img
+                                src="assets/images/footer-section/Arrow 1.png" alt="Arrow"
+                                class="float-md-end pt-md-2 pe-lg-4"></a>
                     </div>
                 </div>
                 <!-- frame 39 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
                 <!-- frame 38 -->
-                <div class="col-md-3 mb-4 text-white pt-5">
+                <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Get in Touch</h3>
                     <div class="frame39-icon pt-3">
                         <img src="assets/images/footer-section/Vector (10).png" alt=""> +852 39195807 <br>
@@ -356,9 +383,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
-                    Technologies</p>
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved.</p>
             </div>
         </div>
     </section>
@@ -402,6 +429,13 @@
                         navbar.classList.remove('navbar-hidden');
                     }
                     lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
                 }
             });
         });
